<resources>
    <string name="app_name">Navigator</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="nav_header_desc">Name</string>
    <string name="login_title">APP GESTOR</string>
    <string name="login_subtitle">Xplora</string>
    <string name="login_version">V.2.0.0</string>
    <string name="login_input1">Usuario</string>
    <string name="login_input2">Password</string>
    <string name="login_buttonI">Ingresar</string>
    <string name="login_buttonR">Registrese</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ubicacion">UbicacionActivity</string>
</resources>